# xv6-rust

./: .gdbinit.tmpl  .gitignore  COPYRIGHT  Cargo.toml  LICENSE  Makefile  README.md  build.rs  i686-xv6rust.json  kernel.ld  vectors.sh
boot/: boot.S  boot.h  main.c  module.mk
doc/: disklayout.md  memlayout.md
fs/: fsformat.c  module.mk
inc/: fs.h  memlayout.h  mmu.h  types.h
src/: add.c  allocator.rs  alltraps.S  buf.rs  console.rs  constants.rs  device.rs  elf.rs  entry.S  entrypgdir.c  env.rs  file.rs  fs.rs  gdt.rs  ide.rs  kbd.rs  kbdmap.c  kclock.rs  kernel_lock.rs  lapic.rs  lib.rs  log.rs  main.rs  mp.rs  mpconfig.rs  mpentry.S  mutex.rs  nop.S  once.rs  picirq.rs  pipe.rs  pmap.rs  rwlock.rs  sched.rs  serial.rs  spinlock.rs  superblock.rs  syscall.rs  sysfile.rs  trap.rs  (+5 more)
user/: argstest.c  cat.c  cd.c  echo.c  entry.S  errno.h  filetest.c  forktest.c  hello.c  init.c  ls.c  malloctest.c  mkdir.c  module.mk  nop.c  pipetest.c  pwd.c  sh.c  spin.c  stat.h  stdarg.h  user.h  user.ld  wc.c  whello.c  yield.c
user/lib/: close.c  exit.c  malloc.c  memmove.c  memset.c  module.mk  open.c  printf.c  printfmt.c  read.c  sbrk.c  stat.c  strchr.c  strcpy.c  strlen.c  strnlen.c  syscall.c  wait_env_id.c  write.c
