[package]
name = "xv6-rust"
version = "0.1.0"
authors = ["tiqwab <tiqwab.ch90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "= 0.6.5"

[build-dependencies]
cc = "1.0"

[profile.dev]

[profile.release]
